@@ -1,11 +1,10 @@
-(*  Title:      HOL/ex/Induction_Scheme.thy
-    ID:         $Id$
+(*  Title:      HOL/ex/Induction_Schema.thy
     Author:     Alexander Krauss, TU Muenchen
 *)
 
 header {* Examples of automatically derived induction rules *}
 
-theory Induction_Scheme
+theory Induction_Schema
 imports Main
 begin
 
@@ -13,21 +12,21 @@ subsection {* Some simple induction principles on nat *}
 
 lemma nat_standard_induct: (* cf. Nat.thy *)
   "\<lbrakk>P 0; \<And>n. P n \<Longrightarrow> P (Suc n)\<rbrakk> \<Longrightarrow> P x"
-by induct_scheme (pat_completeness, lexicographic_order)
+by induction_schema (pat_completeness, lexicographic_order)
 
 lemma nat_induct2:
   "\<lbrakk> P 0; P (Suc 0); \<And>k. P k ==> P (Suc k) ==> P (Suc (Suc k)) \<rbrakk>
   \<Longrightarrow> P n"
-by induct_scheme (pat_completeness, lexicographic_order)
+by induction_schema (pat_completeness, lexicographic_order)
 
 lemma minus_one_induct:
   "\<lbrakk>\<And>n::nat. (n \<noteq> 0 \<Longrightarrow> P (n - 1)) \<Longrightarrow> P n\<rbrakk> \<Longrightarrow> P x"
-by induct_scheme (pat_completeness, lexicographic_order)
+by induction_schema (pat_completeness, lexicographic_order)
 
 theorem diff_induct: (* cf. Nat.thy *)
   "(!!x. P x 0) ==> (!!y. P 0 (Suc y)) ==>
     (!!x y. P x y ==> P (Suc x) (Suc y)) ==> P m n"
-by induct_scheme (pat_completeness, lexicographic_order)
+by induction_schema (pat_completeness, lexicographic_order)
 
 lemma list_induct2': (* cf. List.thy *)
   "\<lbrakk> P [] [];
@@ -35,7 +34,7 @@ lemma list_induct2': (* cf. List.thy *)
   \<And>y ys. P [] (y#ys);
    \<And>x xs y ys. P xs ys  \<Longrightarrow> P (x#xs) (y#ys) \<rbrakk>
  \<Longrightarrow> P xs ys"
-by induct_scheme (pat_completeness, lexicographic_order)
+by induction_schema (pat_completeness, lexicographic_order)
 
 theorem even_odd_induct:
   assumes "R 0"
@@ -44,6 +43,6 @@ theorem even_odd_induct:
   assumes "\<And>n. R n \<Longrightarrow> Q (Suc n)"
   shows "R n" "Q n"
   using assms
-by induct_scheme (pat_completeness+, lexicographic_order)
+by induction_schema (pat_completeness+, lexicographic_order)
 
 end
